--- a/Assignment6.html
+++ b/Assignment6.html
@@ -42,7 +42,7 @@ void main()
 </script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MVnew.js"></script>
-<script type="text/javascript" src="AssignmentSixStarter.js"></script>
+<script type="text/javascript" src="Assignment6.js"></script>
 
 <body>
 <canvas id="gl-canvas" width="512" height="512">
